# parsing-sandbox

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  create-file.js  generate-md.js  justfile  lefthook.yml
.github/workflows/: ci.yml
libsimdutf-wrapper/: CMakeLists.txt  simdutf_wrapper.cpp
proptest-regressions/: parsers_char.txt
src/: lib.rs  main.rs  parsers.rs  parsers_char.rs  parsers_utf16.rs  simdutf.rs  test_data.rs  types.rs  utf16_buf_parser.rs  utf16_parser.rs  utf32_parser.rs  utf8.rs
src/tests/: mod.rs  simdutf_tests.rs  test_data.rs
